# BphPSEG

./: .gitignore  BphPSEG_wandb_sweep.py  Dockerfile  README.md  Unet_model.py  collect_wandb_runs_csv.py  compare_sim_to_experiment.py  dataloader.py  feature_extractor.py  peformance_metrics.py  plot_phantom.py  preprocess.py  pyproject.toml  pytorch_linear_network.py  requirements.txt  requirements.yml  submit_all_pytorch_experiments.py  train_BphPQUANT.py  train_BphPSEG.py  train_Unet_DL.py  train_Unet_DL_raw_images.py  train_classical_ML.py  train_models.py  train_sklearn_ML.py  train_xgboost_ML.py  wandb_sweep_config.yaml
custom_pytorch_utils/: augment_models_func.py  custom_datasets.py  custom_focal_loss.py  custom_transforms.py  peformance_metrics.py
figures/: plot_decay_curves.py  plot_phantom.py
figures_and_tables/: box_plots.py  compare_sim_to_experiment.py  get_wandb_runs.py  make_overleaf_table.py  make_violin_plots.py  plot_decay_curves.py  plot_feature_images.py  plot_test_sample.py  rsOAP_photoswitching_plot.py  sensitivity_vs_conc.py  wandb_api_to_table.ipynb
preprocessing/: dataloader.py  extract_features.py  feature_extractor.py  get_inlcusion_masks.py  preprocess.py  preprocess_reconstructons.py  pytorch_dataset.py  sample_train_val_test_sets.py
pytorch_models/: BphPQUANT.py  BphPSEG.py  BphP_deeplabv3.py  BphP_segformer.py  MLP.py  Unet.py  Unet_plusplus.py
pytorch_utils/: custom_transforms.py  focal_loss.py
