[project]
name = "bphpseg"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dotenv>=0.9.9",
    "h5py==3.15.1",
    "matplotlib==3.7.2",
    "numpy==1.26.4",
    "optuna==4.6.0",
    "pytorch-lightning==1.9.0",
    "scikit-learn==1.7.2",
    "scipy==1.13.0",
    "segmentation-models-pytorch==0.3.3",
    "setuptools>=65,<81",
    "torch==2.2.1",
    "torchmetrics==1.2.0",
    "torchvision==0.17.1",
    "transformers==4.38.1",
    "uv>=0.10.7",
    "wandb>=0.25.0",
    "xgboost==2.0.3",
]
